--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,8 @@
 grid_size: 20
 max_steps: 20
 visualization:
-  mode: "text" # Options: "text", "graphical"
+  mode: "graphical" # Options: "text", "graphical"
 
 # alive_char: "███"
 # dead_char: " ‧ "
+sleep_duration: 0.5
