--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,12 @@
 grid_size: 20
 max_steps: 20
 visualization:
-  mode: "graphical" # Options: "text", "graphical"
+  mode: "text" # Options: "text", "graphical", None
 
 # alive_char: "███"
 # dead_char: " ‧ "
 sleep_duration: 0.5
-initialization_mode: "file" # Options: "random", "file", "input"
+initialization_mode: "random" # Options: "random", "file", "input"
 alive_cell_probability: 0.3 # only used if initialization_mode is "random"
-input_file: "starting_grids/playground20,20set1.npy" # only used if initialization_mode is "file"SS
+input_file: "starting_grids/playground20,20set1.npy" # only used if initialization_mode is "file"
+update_mode: "all" # Options: "all", "alive_based"
